seg fault running evald.js in v8 buildbot

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.1
    • Affects Version/s: None
    • Component/s: JavaScript
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      <http://buildbot.mongodb.org/builders/Linux%2064-bit%20v8/builds/2942/steps/test/logs/stdio>

      Sun Jan 22 12:07:48 [conn284] going to kill op: op: 1333484.0
      Sun Jan 22 12:07:48 Invalid access at address: 0 from thread: conn291
      
      Sun Jan 22 12:07:48 Got signal: 11 (Segmentation fault).
      
      Sun Jan 22 12:07:48 Backtrace:
      0x514384 0x518dcf 0x34dee0e540 0xb04fbc 0xab4896 0xa8f0a8 0xaabc99 0x174a18f4afea 
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod(_ZN5mongo10abruptQuitEi+0x3d4) [0x514384]
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod(_ZN5mongo24abruptQuitWithAddrSignalEiP7siginfoPv+0x27f) [0x518dcf]
       /lib64/libpthread.so.0 [0x34dee0e540]
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod [0xb04fbc]
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod(_ZN5mongo7V8Scope11mongoToLZV8ERKNS_7BSONObjEbb+0x126) [0xab4896]
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod(_ZN5mongo18internalCursorNextEPNS_7V8ScopeERKN2v89ArgumentsE+0x108) [0xa8f0a8]
       /home/yellow/buildslave/Linux_64bit_v8/mongo/mongod(_ZN5mongo7V8Scope10v8CallbackERKN2v89ArgumentsE+0x79) [0xaabc99]
       [0x174a18f4afea]
      

            Assignee:
            Antoine Girbal (Inactive)
            Reporter:
            Aaron Staple (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: