SERVER-4743: seg fault running evald.js in v8 buildbot